--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "surge": "^0.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
