--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
