--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "sort-by": "^1.2.0",
-    "surge": "^0.23.1"
+    "surge": "^0.23.1",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
