--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-date-picker": "^10.6.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
