--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.9.0",
@@ -21,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.22.1",
     "sort-by": "^1.2.0",
     "surge": "^0.23.1",
